@@ -1,3 +1,5 @@
+HEAD
+	+ Make auto creation of e-mail accounts more robust
 1.3.15
 	+ Change UI for maximum message limits and expiration limits
 	+ Bugfix: The report tables changed its name and they are used by
